--- a/index.html
+++ b/index.html
@@ -16,15 +16,10 @@
 					<button class="button2 left"> Contact Me Please</button>
 				</div>
 			</div>
-	<!-- 	<button class="button left"><p> Hit me a line </p></button> -->
-		<!-- <div class="box2 center">Thank you! Have lit a day
-			<img  class="opbackground img " src="https://cbsradionews.files.wordpress.com/2016/02/beyonce-super-bowl-50.jpg?w=640&h=360&crop=1"> 
-		</div> -->
-	<!-- <button class="button2 left"> Contact Me Please</button> -->
 </div>
 <center><button class="button left"><p> Hit me a line </p></button>
-<div class="box2 center"><p>Thank you! Have lit a day<img  class="img"src="http://cdn2.thelineofbestfit.com/media/2013/06/beyonce.jpg"</p></div>
-			<!-- <img src="https://cbsradionews.files.wordpress.com/2016/02/beyonce-super-bowl-50.jpg?w=640&h=360&crop=1"> --> 
+<div class="box2 center"><p>Thank you! Have lit a day<img  class="img"src="http://cdn2.thelineofbestfit.com/media/2013/06/beyonce.jpg"></p></div>
+			
 		</div>
 	</body>
 </html>
